<?xml version="1.0" encoding="utf-8"?>
<com.forrestguice.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:id="@+id/dialog_header"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dialog_margin" android:layout_marginRight="0dp"
    android:layout_marginStart="@dimen/dialog_margin" android:layout_marginEnd="0dp"
    android:layout_marginTop="0dp" android:layout_marginBottom="4dp">

    <View android:id="@+id/dialogTopRightAnchor"
        android:layout_width="1dp" android:layout_height="1dp"
        android:background="@color/transparent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:orientation="vertical" android:layout_margin="0dp"
        android:layout_width="0dp" android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/moondialog_actionbar"
        app:layout_constraintHorizontal_chainStyle="spread_inside">

        <TextView android:id="@+id/moondialog_title" style="@style/DialogTitleStyle"
            android:text="@string/moon_dialog_title" android:layout_marginTop="@dimen/dialog_margin" android:layout_marginBottom="0dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />

        <TextView android:id="@+id/info_time_moon"
            style="@style/SunsetTimeTextView" android:layout_marginTop="2dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="start|left"
            tools:text="June 3, 6:00 PM"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/sundialog_title" />

    </LinearLayout>

    <LinearLayout android:id="@+id/moondialog_actionbar" android:orientation="horizontal"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible">

        <com.forrestguice.support.widget.ImageButton android:id="@+id/media_reset" android:visibility="gone"
            android:layout_width="48dp" android:layout_height="48dp"
            android:padding="12dp" android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/worldmap_dialog_action_reset"
            android:src="?attr/icActionTimeReset" android:scaleType="fitXY" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/menu_button"
            android:layout_width="48dp" android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            style="?attr/actionOverflowButtonStyle"
            android:contentDescription="@string/action_overflow" />

    </LinearLayout>

</com.forrestguice.support.constraint.ConstraintLayout>
