...
        android:paddingLeft="4dp" android:paddingStart="4dp"
        android:paddingRight="8dp" android:paddingEnd="8dp"
        android:contentDescription="@string/worldmap_dialog_action_pause"
        android:src="?attr/icActionPause" />

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/media_prev"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground" android:scaleY="0.75" android:scaleX="0.75"
        android:paddingTop="8dp" android:paddingBottom="8dp" android:scaleType="fitCenter"
        android:contentDescription="@string/worldmap_dialog_action_prev"
        android:src="?attr/icActionPrevious" />

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/media_next"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground" android:scaleY="0.75" android:scaleX="0.75"
        android:paddingTop="8dp" android:paddingBottom="8dp" android:scaleType="fitCenter"
        android:contentDescription="@string/worldmap_dialog_action_next"
        android:src="?attr/icActionNext" />

...
