...
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_help_content"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>
...
