...
            <com.forrestguice.support.widget.AppBarLayout
                android:id="@+id/layout_app_menubar"
                android:layout_width="match_parent" android:layout_height="wrap_content">

                <com.forrestguice.support.widget.Toolbar
                    android:id="@+id/app_menubar" style="?attr/toolbarTheme"
                    app:title="@string/action_colors"
                    app:popupTheme="?attr/actionBarPopupTheme" />

            </com.forrestguice.support.widget.AppBarLayout>

            <LinearLayout android:id="@+id/fragmentContainer"
                android:layout_width="match_parent" android:layout_height="wrap_content"
...
